# web-crawler

./: README.md  main.py  pyproject.toml
src/: crawler.py  exceptions.py  fetcher.py  parser.py
tests/: test_main.py
tests/src/: test_crawler.py  test_fetcher.py  test_parser.py
