[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Web crawler"
authors = ["nlyn <noellynagh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--verbose"
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third-Party"
import_heading_firstparty = "First-Party"
import_heading_localfolder = "Local Folder"
line_length = 79
known_third_party = ["alembic"]
known_first_party = ["db"]
profile = "black"